# SDL-RPG-Game

./: .gitignore  CMakeLists.txt  CulturalAdventure.vcxproj  CulturalAdventure.vcxproj.filters  Game.cpp  Makefile  README.md  SDL-RPG-Game.sln  SDL-RPG-Game.vcxproj  SDL-RPG-Game.vcxproj.filters  TextureManager.cpp  TextureManager.h  main.cpp
SDL-RPG-Game/src/: Player.h
assets/: Block List.txt
maps/: down.lvl  left.lvl  right.lvl  start.lvl  test.lvl  up.lvl
src/: CMakeLists.txt  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Game.cpp  Game.h  Global.cpp  Global.h  LevelManager.cpp  LevelManager.h  Object.cpp  Object.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h  Sprite.cpp  Sprite.h  TextureManager.cpp  TextureManager.h  Tilemap.cpp  Tilemap.h  Tiles.cpp  Tiles.h  main.cpp
